--- a/electron/package.json
+++ b/electron/package.json
@@ -11,36 +11,52 @@
   "build": {
     "appId": "com.taxoffice.app",
     "productName": "Arkive Tax Management",
+    "artifactName": "${productName}-${version}-${os}-${arch}.${ext}",
     "compression": "maximum",
+    "removePackageScripts": true,
     "nsis": {
       "oneClick": false,
       "allowToChangeInstallationDirectory": true,
       "createDesktopShortcut": true,
       "createStartMenuShortcut": true,
-      "shortcutName": "Arkive Tax Management"
+      "shortcutName": "Arkive Tax Management",
+      "installerIcon": "assets/icon.ico",
+      "uninstallerIcon": "assets/icon.ico",
+      "installerHeaderIcon": "assets/icon.ico",
+      "deleteAppDataOnUninstall": false,
+      "runAfterFinish": true,
+      "createDesktopShortcut": "always",
+      "createStartMenuShortcut": true,
+      "menuCategory": "Business"
     },
     "directories": {
       "output": "dist"
     },
     "files": [
-  "main.js",
-  "preload.js",
-  "dist/**/*",
-  "assets/**/*"
-]
-,
+      "main.js",
+      "preload.js",
+      "dist/**/*",
+      "assets/**/*",
+      "!node_modules",
+      "!src",
+      "!*.log"
+    ],
     "win": {
       "target": "nsis",
       "icon": "assets/icon.ico",
-      "requestedExecutionLevel": "asInvoker"
+      "requestedExecutionLevel": "asInvoker",
+      "publisherName": "Arkive Solutions",
+      "verifyUpdateCodeSignature": false
     },
     "linux": {
       "target": "AppImage",
-      "icon": "assets/icon.png"
+      "icon": "assets/icon.png",
+      "category": "Office"
     },
     "mac": {
       "target": "dmg",
-      "icon": "assets/icon.icns"
+      "icon": "assets/icon.icns",
+      "category": "public.app-category.business"
     },
     "extraResources": [
       {
@@ -48,10 +64,12 @@
         "to": "public",
         "filter": ["**/*"]
       }
-    ]
+    ],
+    "publish": null
   },
   "devDependencies": {
     "electron": "^27.0.0",
-    "electron-builder": "^24.6.4"
+    "electron-builder": "^24.6.4",
+    "electron-reload": "^2.0.0-alpha.1"
   }
 }
